--- a/html/musica.html
+++ b/html/musica.html
@@ -76,7 +76,7 @@
         <div class="card-body">
           <h5 class="card-title">Assaltante</h5>
           <audio id="audio1"  src="../musica/Alta/Assunto_Delicado.mp3"></audio>
-          <a class="btn btn-primary player1">PLAY</a>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
         <div class="card-body">
           <h5 class="card-title">Haja colírio</h5>
           <div class=""></div>
-          <audio id="audio2" src="../musica/Lancamentos/Haja Colírio.mp3"></audio>
+          <audio id="audio3" src="../musica/Lancamentos/Haja Colírio.mp3"></audio>
           <a class="btn btn-primary playerALL" >PLAY</a>
         </div>
       </div>
@@ -111,7 +111,7 @@
         <div class="card-body">
           <h5 class="card-title">Rojão</h5>
           <div class=""></div>
-          <audio id="audio2" src="../musica/Lancamentos/Rojão.mp3"></audio>
+          <audio id="audio4" src="../musica/Lancamentos/Rojão.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -123,7 +123,7 @@
         <div class="card-body">
           <h5 class="card-title">Sereia</h5>
           <div class=""></div>
-          <audio id="audio2" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <audio id="audio5" src="../musica/Lancamentos/SEREIA.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -140,6 +140,8 @@
         <img src="../img/recomendado/arranhao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Arranhão</h5>
+          <div class=""></div>
+          <audio id="audio6" src="../musica/Recomendado/ARRANHÃO.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -150,6 +152,8 @@
         <img src="../img/recomendado/bloqueado.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Bloqueado</h5>
+          <div class=""></div>
+          <audio id="audio7" src="../musica/Recomendado/Bloqueado.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -160,6 +164,8 @@
         <img src="../img/recomendado/MalFeito.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Mal feito</h5>
+          <div class=""></div>
+          <audio id="audio8" src="../musica/Recomendado/Mal Feito.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -170,6 +176,8 @@
         <img src="../img/recomendado/malvadao.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Malvadão 3</h5>
+          <div class=""></div>
+          <audio id="audio9" src="../musica/Recomendado/Malvadão 3.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -180,6 +188,8 @@
         <img src="../img/recomendado/volante.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Molhando o volante</h5>
+          <div class=""></div>
+          <audio id="audio10" src="../musica/Recomendado/Molhando o Volante.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -197,6 +207,8 @@
         <img src="../img/alta/Assunto.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Assunto delicado</h5>
+          <div class=""></div>
+          <audio id="audio11" src="../musica/"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -207,7 +219,9 @@
         <img src="../img/alta/Casei.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Casei com a putaria</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio12" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -217,7 +231,9 @@
         <img src="../img/alta/GostoAssim.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Eu gosto assim</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio13" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -227,7 +243,9 @@
         <img src="../img/alta/PoesiaAcustica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Poesia acústica 13</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio14" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -237,7 +255,9 @@
         <img src="../img/alta/sofrencia.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Sofrência remix</h5>
-          <a class="btn btn-primary player1">PLAY</a>
+          <div class=""></div>
+          <audio id="audio15" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
     </div>
@@ -249,17 +269,17 @@
       <div class="player-controle">
         <ul>
           <li>
-            <a class="player"><img src="../icons/play.png" alt="play" width="31px"></a>
+            <a class="botao-play" onclick="return tocarAudio();"><img src="../icons/play.png" alt="play" width="31px"></a>
           </li>
           <li>
-            <a class="palse"><img src="../icons/palse.png" alt="palse" width="38px"></a>
+            <a class="botao-pause" onclick="return pararAudio();"><img src="../icons/palse.png" alt="palse" width="38px"></a>
           </li>
           <li>
             <a class="proxima"><img src="../icons/proximo.png" alt="proximo" width="33px"></a>
           </li>
           <div class="barra">
           <li class="inicio">0:00</li>
-          <progress></progress></li>
+          <progress value="0" max="1"></progress></li>
              <li class="fim">3:40</li>
         </ul>
       </div>
@@ -268,18 +288,6 @@
     </div>
   </main>
 
-  <footer>
-    <div class="informacao">
-      <ul>
-        <li>
-          <a href="../html/sobre.html">Sobre</a>
-        </li>
-        <li>
-          <a href="../html/musica.html">Musicas</a>
-        </li>
-      </ul>
-    </div>
-  </footer>
   <script src="/js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
