--- a/html/musica.html
+++ b/html/musica.html
@@ -87,7 +87,7 @@
         <div class="card-body">
           <h5 class="card-title">Meu número </h5>
           <div class=""></div>
-          <audio id="audio2" src="../musica/Meu Número (320 kbps).mp3"></audio>
+          <audio id="audio2" src="../musica/Lancamentos/Meu.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -99,7 +99,7 @@
         <div class="card-body">
           <h5 class="card-title">Haja colírio</h5>
           <div class=""></div>
-          <audio id="audio3" src="../musica/Lancamentos/Haja Colírio.mp3"></audio>
+          <audio id="audio3" src="../musica/Lancamentos/Haja.mp3"></audio>
           <a class="btn btn-primary playerALL" >PLAY</a>
         </div>
       </div>
@@ -111,7 +111,7 @@
         <div class="card-body">
           <h5 class="card-title">Rojão</h5>
           <div class=""></div>
-          <audio id="audio4" src="../musica/Lancamentos/Rojão.mp3"></audio>
+          <audio id="audio4" src="../musica/Lancamentos/Rojao.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -141,7 +141,7 @@
         <div class="card-body">
           <h5 class="card-title">Arranhão</h5>
           <div class=""></div>
-          <audio id="audio6" src="../musica/Recomendado/ARRANHÃO.mp3"></audio>
+          <audio id="audio6" src="../musica/Recomendado/ARRANHAO.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -165,7 +165,7 @@
         <div class="card-body">
           <h5 class="card-title">Mal feito</h5>
           <div class=""></div>
-          <audio id="audio8" src="../musica/Recomendado/Mal Feito.mp3"></audio>
+          <audio id="audio8" src="../musica/Recomendado/Mal.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -177,7 +177,7 @@
         <div class="card-body">
           <h5 class="card-title">Malvadão 3</h5>
           <div class=""></div>
-          <audio id="audio9" src="../musica/Recomendado/Malvadão 3.mp3"></audio>
+          <audio id="audio9" src="../musica/Recomendado/Malvadao.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -189,7 +189,7 @@
         <div class="card-body">
           <h5 class="card-title">Molhando o volante</h5>
           <div class=""></div>
-          <audio id="audio10" src="../musica/Recomendado/Molhando o Volante.mp3"></audio>
+          <audio id="audio10" src="../musica/Recomendado/Molhando.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -208,7 +208,7 @@
         <div class="card-body">
           <h5 class="card-title">Assunto delicado</h5>
           <div class=""></div>
-          <audio id="audio11" src="../musica/"></audio>
+          <audio id="audio11" src="../musica/Alta/Assunto.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -220,7 +220,7 @@
         <div class="card-body">
           <h5 class="card-title">Casei com a putaria</h5>
           <div class=""></div>
-          <audio id="audio12" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <audio id="audio12" src="../musica/Alta/CASEI.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -232,7 +232,7 @@
         <div class="card-body">
           <h5 class="card-title">Eu gosto assim</h5>
           <div class=""></div>
-          <audio id="audio13" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <audio id="audio13" src="../musica/Alta/Gosto.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -244,7 +244,7 @@
         <div class="card-body">
           <h5 class="card-title">Poesia acústica 13</h5>
           <div class=""></div>
-          <audio id="audio14" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <audio id="audio14" src="../musica/Alta/Poesia.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
@@ -256,7 +256,7 @@
         <div class="card-body">
           <h5 class="card-title">Sofrência remix</h5>
           <div class=""></div>
-          <audio id="audio15" src="../musica/Lancamentos/SEREIA.mp3"></audio>
+          <audio id="audio15" src="../musica/Alta/Sofrencia.mp3"></audio>
           <a class="btn btn-primary playerALL">PLAY</a>
         </div>
       </div>
